summative.moria.Moria.scala.error
Erreur de compilation :
Moria:12: error: not found: value ramBiscuit
                    if(estSurBiscuit()){ramBiscuit()}}
                                        ^